Simplify run script, add flight recorder configs, and more remote tests